# ghana-speech-asr

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: whisper_akan_ewe.yaml
model_card/: MODEL_CARD.md
scripts/: prepare.sh  tmux_train.sh  train.sh
src/ghana_asr/: __init__.py  config.py
src/ghana_asr/cli/: __init__.py  evaluate.py  prepare.py  push.py  train.py
src/ghana_asr/data/: dataset.py  manifests.py
src/ghana_asr/evaluation/: metrics.py
src/ghana_asr/training/: loop.py
src/ghana_asr/utils/: audio.py  logging.py  seeding.py
tests/: test_manifests.py
